--- a/index.html
+++ b/index.html
@@ -1,13 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pre-Entrega2 Villagra</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1>eCommerce</h1>
-    <script src="main.js"></script>
+
+    <form id="form">
+        <input class="form" type="text" placeholder="Nombre del producto" name="name" required>
+        <input class="form" type="number" placeholder="Precio" name="price" required>
+        <input class="form" type="number" placeholder="Stock" name="stock" required>
+        <button class="submit" type="submit">Crear</button>
+    </form>
+    
+    <div id="container"></div>
+
+
+    <script src="main2.js"></script>
 </body>
+
 </html>
