Tercera-Pre entrega

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <input class="form" type="text" placeholder="Nombre del producto" name="name" required>
         <input class="form" type="number" placeholder="Precio" name="price" required>
         <input class="form" type="number" placeholder="Stock" name="stock" required>
-        <button class="submit" type="submit">Crear</button>
+        <button class="submit" type="submit">Guardar</button>
     </form>
     
     <div id="container"></div>
 
 
-    <script src="main2.js"></script>
+    <script src="main.js"></script>
 </body>
 
 </html>
